Add titles to instructions ilustrations

--- a/app/index.html
+++ b/app/index.html
@@ -457,34 +457,34 @@
 
 
 									<img class="arrow arrow1" src="img/arrow6.png" alt="">
-									<span class="arrow-text text1">text1</span>
+									<span class="arrow-text text1" data-translatable>Data X // Вісь X</span>
 									<img class="arrow arrow2" src="img/arrow6.png" alt="">
-									<span class="arrow-text text2">text2</span>
+									<span class="arrow-text text2" data-translatable>Filter // Фльтр</span>
 									<img class="arrow arrow3" src="img/arrow6.png" alt="">
-									<span class="arrow-text text3">text3</span>
+									<span class="arrow-text text3" data-translatable>Geo chart // Картограма</span>
 									<img class="arrow arrow4" src="img/arrow6.png" alt="">
-									<span class="arrow-text text4">text4</span>
+									<span class="arrow-text text4" data-translatable>Plot | Tabular // Графік | Таблиця</span>
 									<img class="arrow arrow5" src="img/arrow6.png" alt="">
-									<span class="arrow-text text5">text5</span>
+									<span class="arrow-text text5" data-translatable>Geography // Географія</span>
 
 									
 
 									<img class="arrow arrow6" src="img/arrow5.png" alt="">
-									<span class="arrow-text text6">text6</span>
+									<span class="arrow-text text6" data-translatable>Comparative table // Порівняльна таблиця</span>
 									<img class="arrow arrow7" src="img/arrow5.png" alt="">
-									<span class="arrow-text text7">text7</span>
+									<span class="arrow-text text7" data-translatable>text7 // </span>
 
 									<img class="arrow arrow8" src="img/arrow8.png" alt="">
-									<span class="arrow-text text8">text8</span>
+									<span class="arrow-text text8" data-translatable>text8 // </span>
 									<img class="arrow arrow9" src="img/arrow8.png" alt="">
-									<span class="arrow-text text9">text9</span>
+									<span class="arrow-text text9" data-translatable>text9 // </span>
 
 									<img class="arrow arrow10" src="img/arrow7.png" alt="">
-									<span class="arrow-text text10">text10</span>
+									<span class="arrow-text text10" data-translatable>text10 // </span>
 									<img class="arrow arrow11" src="img/arrow7.png" alt="">
-									<span class="arrow-text text11">text11</span>
+									<span class="arrow-text text11" data-translatable>text11 // </span>
 									<img class="arrow arrow12" src="img/arrow7.png" alt="">
-									<span class="arrow-text text12">text12</span>
+									<span class="arrow-text text12" data-translatable>text12 // </span>
 
 									
 								</div>							
