Add translation to illustrations titles

--- a/app/index.html
+++ b/app/index.html
@@ -461,7 +461,7 @@
 									<img class="arrow arrow2" src="img/arrow6.png" alt="">
 									<span class="arrow-text text2" data-translatable>Filter // Фльтр</span>
 									<img class="arrow arrow3" src="img/arrow6.png" alt="">
-									<span class="arrow-text text3" data-translatable>Geo chart // Картограма</span>
+									<span class="arrow-text text3" data-translatable>Geo chart #1 // Картограма #1</span>
 									<img class="arrow arrow4" src="img/arrow6.png" alt="">
 									<span class="arrow-text text4" data-translatable>Plot | Tabular // Графік | Таблиця</span>
 									<img class="arrow arrow5" src="img/arrow6.png" alt="">
@@ -472,19 +472,19 @@
 									<img class="arrow arrow6" src="img/arrow5.png" alt="">
 									<span class="arrow-text text6" data-translatable>Comparative table // Порівняльна таблиця</span>
 									<img class="arrow arrow7" src="img/arrow5.png" alt="">
-									<span class="arrow-text text7" data-translatable>text7 // </span>
+									<span class="arrow-text text7" data-translatable>Bubble chart // Точкова діаграма</span>
 
 									<img class="arrow arrow8" src="img/arrow8.png" alt="">
-									<span class="arrow-text text8" data-translatable>text8 // </span>
+									<span class="arrow-text text8" data-translatable>Geo chart #2 // Картограма #2</span>
 									<img class="arrow arrow9" src="img/arrow8.png" alt="">
-									<span class="arrow-text text9" data-translatable>text9 // </span>
+									<span class="arrow-text text9" data-translatable>Other indicators // Інші показники</span>
 
 									<img class="arrow arrow10" src="img/arrow7.png" alt="">
-									<span class="arrow-text text10" data-translatable>text10 // </span>
+									<span class="arrow-text text10" data-translatable>Control panel #1 // панель керування #1</span>
 									<img class="arrow arrow11" src="img/arrow7.png" alt="">
-									<span class="arrow-text text11" data-translatable>text11 // </span>
+									<span class="arrow-text text11" data-translatable>Data Y // Вісь Y</span>
 									<img class="arrow arrow12" src="img/arrow7.png" alt="">
-									<span class="arrow-text text12" data-translatable>text12 // </span>
+									<span class="arrow-text text12" data-translatable>Control panel #2 // панель керування #2</span>
 
 									
 								</div>							
@@ -557,9 +557,9 @@
 
 
 									<img class="arrow arrow19" src="img/arrow8_gray.png" alt="">
-									<span class="arrow-text text19">text19</span>
+									<span class="arrow-text text19" data-translatable>Filter type // Тип фільтру</span>
 									<img class="arrow arrow20" src="img/arrow8_gray.png" alt="">
-									<span class="arrow-text text20">text20</span>
+									<span class="arrow-text text20" data-translatable>Filter settings // Налаштування фільтру</span>
 
 									<!-- <img class="arrow arrow21" src="img/arrow8.png" alt="">
 									<span class="arrow-text text21">text21</span>
