--- a/app/index.html
+++ b/app/index.html
@@ -615,7 +615,7 @@
 			<div class="container">
 				<div class="footer">
 					<div class="copyright">
-						<span data-translatable>Copyright © 2018 WB Groupe. // Всі права захищено © 2018 Світовий Банк</span>
+						<span data-translatable>Copyright © 2018 WB Group // Всі права захищено © 2018 Світовий Банк</span>
 					</div>
 					<!-- <address>
 						<span class="addr-item" data-translatable>88 Lorem ipsum. 88th Street // 88 Lorem ipsum. 88th Street</span>
